syntax = "proto3";

package account.v1;

message GetAccountRequest {
    int32 id = 1;
}

message GetAccountResponse {
    int32 id = 1;
}

service AccountService {
  rpc GetAccount(GetAccountRequest) returns (GetAccountResponse) {}
}
